# wkbparse

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  publish_wkbparse_proj.yml  test.yml
scripts/: test.sh
src/: error.rs  ewkb.rs  geojson.rs  lib.rs  pyo.rs  reproject.rs  twkb.rs  types.rs
tests/: test_ewkb.py  test_reproject.py  test_twkb.py
tests/data/: large-ewkb-multipolygon-example.ewkb  large-ewkb-polygon-example.ewkb  large-twkb-multipolygon-example.twkb  large-twkb-polygon-example.twkb  medium-ewkb-polygon-example.ewkb  medium-twkb-polygon-example.twkb
wkbparse/: __init__.py  wkbparse.pyi
