[package]
name = "wkbparse"
version = "0.1.2"
authors = ["Arsi Juote <arsi.juote@gmail.com>"]
description = "Parse EWKB and TWKB geometries into GeoJSON, with Python bindings."
homepage = "https://github.com/arjuote/wkbparse"
repository = "https://github.com/arjuote/wkbparse"
readme = "README.md"
keywords = ["PostgreSQL", "PostGIS", "GIS", "GEO", "WKB", "TWKB", "GeoJSON"]
license = "MIT"

[lib]
name = "wkbparse"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
pyo3 = {version = "0.19.0", optional = true}

[profile.release]
lto = true

[dev-dependencies]

[features]
python = ["pyo3"]
extension-module = ["pyo3/extension-module"]
default = ["python", "extension-module"]
